# apteryx-netconf

./: .gitignore  Makefile.am  README.md  configure.ac  data.c  fix-indent.sh  internal.h  logging.c  main.c  netconf.c  run.sh  test_netconf.py
.github/workflows/: pr-tests.yml
examples/: nc_copy_config.py  nc_delete_config.py  nc_edit_config.py  nc_subtree.py  nc_xpath.py
models/: alphabet.xml  netconf-logging-options  rfc6243_example.xml  rfc6243_example.yang  test.xml  test.yang  test2:test2.xml
src/: Makefile.am  internal.h  main.c  netconf.c
tests/: conftest.py  test_def_op.py  test_edit_config.py  test_get_subtree.py  test_get_xpath.py  test_hello.py  test_lock_unlock.py  test_netconf.py  test_patterns.py  test_sessions.py  test_with_defaults.py
